fix: 이미지 파일 명

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <img
                 id="inputLogo"
                 style="width: 36px"
-                src="img/imageD.png"
+                src="img/search.png"
                 alt="Input Logo"
               />
               <input style="width: 80%" placeholder="Search..." />
@@ -31,13 +31,13 @@
           </div>
           <div class="icon-wrap">
             <div>
-              <img src="img/imageA.png" alt="filter" onclick="toggle()" />
+              <img src="img/filter.png" alt="filter" onclick="toggle()" />
             </div>
             <div>
-              <img src="img/imageB.png" alt="Icon B" />
+              <img src="img/alert.png" alt="Icon B" />
             </div>
             <div>
-              <img src="img/imageC.png" id="profile" alt="Profile" />
+              <img src="img/profile.png" id="profile" alt="Profile" />
             </div>
           </div>
         </div>
@@ -81,7 +81,9 @@
     </div>
 
     <!-- 알림 팝업 -->
-    <div></div>
+    <div>
+      <div></div>
+    </div>
 
     <script src="app.js"></script>
   </body>
