feat: writing Btn fix: 알림창

--- a/index.html
+++ b/index.html
@@ -44,7 +44,16 @@
       </div>
       <div class="divide-line"></div>
     </header>
-
+    <div class="body">
+      <div class="container"></div>
+    </div>
+    <footer>
+      <img
+        src="img/writing.png"
+        class="writing"
+        onclick="window.location.href='/posts/writes'"
+      ></img>
+    </footer>
     <!-- 필터 팝업 -->
     <div id="filterPopUp" class="hidden">
       <div class="frame">
@@ -86,7 +95,9 @@
 
     <!-- 알림 팝업 -->
     <div class="hidden" id="alert">
-      <div></div>
+      <div>
+        <h3>알림창</h3>
+      </div>
     </div>
 
     <script src="app.js"></script>
