--- a/start/index.html
+++ b/start/index.html
@@ -8,7 +8,16 @@
   </head>
   <body>
     <h1><img src="/img/logo2.png" alt="로고" /></h1>
-    <img src="/img/cacao.png" alt="카카오톡로그인" id="cacao" onclick="" />
-    <button id="login" onclick="window.location.href='/login'">로그인</button>
+    <img
+      class="login"
+      src="/img/cacao.png"
+      alt="카카오톡로그인"
+      id="cacao"
+      onclick=""
+    />
+    <button class="login" id="login" onclick="window.location.href='/login'">
+      로그인
+    </button>
+    <script src="start.js"></script>
   </body>
 </html>
