--- a/start/index.html
+++ b/start/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GIF</title>
     <link rel="stylesheet" href="start.css" />
+    <link rel="icon" href="img/logo.png" />
   </head>
   <body>
     <h1><img src="/img/logo2.png" alt="로고" /></h1>
