--- a/start/index.html
+++ b/start/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GIF</title>
     <link rel="stylesheet" href="start.css" />
-    <link rel="icon" href="img/logo.png" />
+    <link rel="icon" href="/img/logo.png" />
   </head>
   <body>
     <h1><img src="/img/logo2.png" alt="로고" /></h1>
@@ -14,7 +14,7 @@
       src="/img/cacao.png"
       alt="카카오톡로그인"
       id="cacao"
-      onclick=""
+      onclick="window.location.href='https://accounts.kakao.com/login/?continue=https%3A%2F%2Fkauth.kakao.com%2Foauth%2Fauthorize%3Fresponse_type%3Dcode%26redirect_uri%3Dhttps%253A%252F%252Flocalhost%253A8080%252Foauth%26through_account%3Dtrue%26client_id%3D14aff02f77724e4360ccdb2074d41266#login'"
     />
     <button class="login" id="login" onclick="window.location.href='/login'">
       로그인
