--- a/chating/index.html
+++ b/chating/index.html
@@ -15,7 +15,7 @@
             <img
               src="/img/logo.png"
               onclick="window.location.href='/'"
-              alt="Logo"
+              alt="로고"
             />
           </div>
           <div class="input-wrap">
@@ -24,7 +24,7 @@
                 id="inputLogo"
                 style="width: 36px"
                 src="/img/search.png"
-                alt="Input Logo"
+                alt="검색"
               />
               <input style="width: 80%" placeholder="Search..." />
             </div>
