feat: 내가 전송한 메시지 UI

--- a/chating/index.html
+++ b/chating/index.html
@@ -34,7 +34,7 @@
               <img src="/img/alert.png" alt="알림" />
             </div>
             <div>
-              <img src="/img/profile.png" id="profile" alt="프로필" />
+              <img src="/img/profile.png" class="profile" alt="프로필" />
             </div>
           </div>
         </div>
@@ -43,6 +43,10 @@
     </header>
     <div class="container1">
       <div class="container">
+        <div class="chating-container">
+          <img class="profile" src="/img/profile.png" alt="프로필" />
+          <div class="each">블랄블비라쩌저고 저쩌고 dddddddlllllllllll</div>
+        </div>
         <div class="input">
           <input type="text" class="message" />
           <img src="/img/send.png" alt="전송" class="send" />
