--- a/chating/index.html
+++ b/chating/index.html
@@ -43,6 +43,7 @@
     </header>
     <div class="container1">
       <div class="container">
+        <div id="profileContainer"></div>
         <div class="chating-container">
           <img class="profile" src="/img/profile.png" alt="프로필" />
           <div class="each">블랄블비라쩌저고 저쩌고 dddddddlllllllllll</div>
