--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
                 id="inputLogo"
                 style="width: 36px"
                 src="img/search.png"
-                alt="Input Logo"
+                alt="검색"
               />
               <input style="width: 80%" placeholder="Search..." />
             </div>
           </div>
           <div class="icon-wrap">
             <div>
-              <img src="img/filter.png" alt="filter" onclick="filterToggle()" />
+              <img src="img/filter.png" alt="필터" id="filtericon"/>
             </div>
             <div>
-              <img src="img/alert.png" alt="alert" onclick="alertToggle()" />
+              <img src="img/alert.png" alt="알림" id="alerticon" />
             </div>
             <div>
-              <img src="img/profile.png" id="profile" alt="Profile" />
+              <img src="img/profile.png" id="profile" alt="프로필" />
             </div>
           </div>
         </div>
