--- a/signup/index.html
+++ b/signup/index.html
@@ -21,7 +21,7 @@
             placeholder=" 학교 이메일을 입력해주세요..."
             oninput="checkEmail()"
           />
-          <span class="error-message hidden" id="emailError"
+          <span class="error-message-hidden" id="emailError"
             >올바른 이메일 주소를 입력하세요</span
           >
         </div>
@@ -33,7 +33,7 @@
             placeholder=" 영문, 숫자, 특수문자 2개 이상 포함 8글자 이상"
             oninput="checkPassword()"
           />
-          <span class="error-message hidden" id="passwordError"></span>
+          <span class="error-message-hidden" id="passwordError"></span>
         </div>
         <div class="form-group">
           <label for="repassword">비밀번호 재입력</label>
@@ -43,7 +43,7 @@
             placeholder=" 비밀번호 재입력해주세요..."
             oninput="checkConfirmPassword()"
           />
-          <span class="error-message hidden" id="repasswordError"></span>
+          <span class="error-message-hidden" id="repasswordError"></span>
         </div>
         <div class="button">
           <input type="submit" id="bu" value="회원가입" />
