--- a/signup/index.html
+++ b/signup/index.html
@@ -18,7 +18,7 @@
           <input
             type="text"
             id="email"
-            placeholder=" 학교 이메일을 입력해주세요..."
+            placeholder="이메일을 입력해주세요..."
             oninput="checkEmail()"
           />
           <span class="error-message-hidden" id="emailError"
