--- a/signup/index.html
+++ b/signup/index.html
@@ -14,14 +14,14 @@
       </div>
       <form id="signup" method="post" onsubmit="return validateForm()">
         <div class="form-group">
-          <label for="email">이메일</label>
+          <label for="email" oninput="checkEmail()">이메일</label>
           <input
             type="text"
             id="email"
             placeholder="이메일을 입력해주세요..."
             oninput="checkEmail()"
           />
-          <span class="error-message-hidden" id="emailError"
+          <span class="hidden" id="emailError"
             >올바른 이메일 주소를 입력하세요</span
           >
         </div>
