--- a/signup/index.html
+++ b/signup/index.html
@@ -14,7 +14,9 @@
       </div>
       <form id="signup" method="post" onsubmit="return validateForm()">
         <div class="form-group">
-          <label for="email" oninput="checkEmail()">이메일</label>
+          <label id="emaillabel" for="email" oninput="checkEmail()"
+            >이메일</label
+          >
           <input
             type="text"
             id="email"
@@ -26,7 +28,7 @@
           >
         </div>
         <div class="form-group">
-          <label for="password">비밀번호</label>
+          <label id="passwordlabel" for="password">비밀번호</label>
           <input
             type="password"
             id="password"
@@ -36,7 +38,7 @@
           <span class="error-message-hidden" id="passwordError"></span>
         </div>
         <div class="form-group">
-          <label for="repassword">비밀번호 재입력</label>
+          <label id="repasswordlabel" for="repassword">비밀번호 재입력</label>
           <input
             type="password"
             id="repassword"
