--- a/login/index.html
+++ b/login/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>회원가입</title>
+    <title>로그인</title>
     <link rel="stylesheet" href="/login/login.css" />
     <link rel="icon" href="/img/logo.png" />
   </head>
@@ -34,6 +34,6 @@
         </div>
       </form>
     </div>
-    <script src="/signup/signup.js"></script>
+    <script src="/login/login.js"></script>
   </body>
 </html>
