feat: required fix: submitBtn

--- a/login/index.html
+++ b/login/index.html
@@ -16,6 +16,7 @@
         <div class="form-group">
           <label for="email">이메일</label>
           <input
+            required
             type="text"
             id="email"
             placeholder="이메일을 입력해주세요..."
@@ -27,10 +28,11 @@
             type="password"
             id="password"
             placeholder=" 영문, 숫자, 특수문자 2개 이상 포함 8글자 이상"
+            required
           />
         </div>
         <div class="button">
-          <input type="submit" id="bu" value="회원가입" />
+          <input type="submit" id="bu" value="로그인" />
         </div>
       </form>
     </div>
