--- a/login/index.html
+++ b/login/index.html
@@ -36,6 +36,10 @@
         <div class="button">
           <input type="submit" id="bu" value="로그인" />
         </div>
+        <div style="display: flex; gap: 5px">
+          <span id="question">아직 회원이 아니신가요?</span>
+          <a href="/signup/index.html">회원가입</a>
+        </div>
       </form>
     </div>
     <script src="/login/login.js"></script>
