fix: container style feat: previousBtn

--- a/chating/index.html
+++ b/chating/index.html
@@ -39,11 +39,13 @@
           </div>
         </div>
       </div>
-
       <div class="divide-line"></div>
     </header>
     <div class="container1">
       <div class="container">
+        <div>
+          <img src="/img/arrow.png" alt="이전" id="previous" />
+        </div>
         <div id="profileContainer"></div>
         <div class="chating-container">
           <img class="profile" src="/img/profile.png" alt="프로필" />
