--- a/chating/index.html
+++ b/chating/index.html
@@ -44,17 +44,18 @@
     </header>
     <div class="container1">
       <div class="container">
-        <div>
+        <div id="inform">
           <img src="/img/arrow.png" alt="이전" id="previous" />
-        </div>
-        <div id="profileContainer"></div>
-        <div id="profileContainer">
-          <img src="/img/arrow.png" alt="이전" id="previous" />
-          <div>
-            <img src="/img/profile.png" alt="프로필 이미지" />
-            <h1></h1>
+          <div style="display: flex; align-items: center; gap: 10px">
+            <img
+              src="/img/profile.png"
+              alt="프로필"
+              style="width: 46px; height: 46px"
+            />
+            <div id="name">김지훈</div>
           </div>
         </div>
+        <div id="profileContainer"></div>
         <div class="chating-container">
           <img class="profile" src="/img/profile.png" alt="프로필" />
           <div class="each">블랄블비라쩌저고 저쩌고 dddddddlllllllllll</div>
