feat: 분실물 게시물

--- a/chating/index.html
+++ b/chating/index.html
@@ -55,7 +55,15 @@
             <div id="name">김지훈</div>
           </div>
         </div>
-        <div id="profileContainer"></div>
+        <div id="profileContainer">
+          <img src="/img/losing.png" alt="분실물" id="post" />
+          <div style="display: flex; flex-direction: column">
+            <h2 style="margin: 0">분실물</h2>
+            <h5 style="margin: 0; color: #000000; opacity: 60%">
+              사례금: 2000원
+            </h5>
+          </div>
+        </div>
         <div class="chating-container">
           <img class="profile" src="/img/profile.png" alt="프로필" />
           <div class="each">블랄블비라쩌저고 저쩌고 dddddddlllllllllll</div>
