feat: profileBtn 경로

--- a/chating/index.html
+++ b/chating/index.html
@@ -48,6 +48,7 @@
           <img src="/img/arrow.png" alt="이전" id="previous" />
           <div style="display: flex; align-items: center; gap: 10px">
             <img
+              class="profile"
               src="/img/profile.png"
               alt="프로필"
               style="width: 46px; height: 46px"
@@ -80,6 +81,6 @@
         <h3>알림창</h3>
       </div>
     </div>
-    <script src="chating.js"></script>
+    <script src="/chating/chating.js"></script>
   </body>
 </html>
